[gd_scene load_steps=10 format=3 uid="uid://ddn68rnno11mq"]

[ext_resource type="PackedScene" path="res://itens/test_material/entities/main_entity_example/entity.tscn" id="1_8mb57"]
[ext_resource type="Script" path="res://addons/ecs_brazuca/systems/damage_system/damage_system.gd" id="1_e20wk"]
[ext_resource type="Script" path="res://addons/ecs_brazuca/components/health_component/health_component.gd" id="2_f2dn4"]
[ext_resource type="Script" path="res://addons/ecs_brazuca/systems/element_system/effect_system.gd" id="2_worm2"]
[ext_resource type="Script" path="res://addons/ecs_brazuca/components/damage_component/damage_component.gd" id="4_l1iww"]
[ext_resource type="Script" path="res://addons/ecs_brazuca/components/effect_component/effect_component.gd" id="5_gmcvy"]
[ext_resource type="Script" path="res://itens/test_material/entities/enemy_example/entities.gd" id="6_fwpvn"]
[ext_resource type="Script" path="res://addons/ecs_brazuca/resources/effect_data.gd" id="6_r3hpr"]

[sub_resource type="Resource" id="Resource_nm8cl"]
script = ExtResource("6_r3hpr")
effect_name = "Endurance"
effect_type = 2
effect_duraction = 0.0
effect_data = {
"resistence_ratio": 2.0
}

[node name="TestECS" type="Node"]

[node name="Systems" type="Node" parent="."]

[node name="DamageSystem" type="Node" parent="Systems"]
unique_name_in_owner = true
script = ExtResource("1_e20wk")

[node name="EffectSystem" type="Node" parent="Systems"]
unique_name_in_owner = true
script = ExtResource("2_worm2")

[node name="PlayerTest" parent="." instance=ExtResource("1_8mb57")]
z_index = 1
position = Vector2(293, 166)

[node name="HealthComponent" type="Node" parent="PlayerTest"]
script = ExtResource("2_f2dn4")
max_health = 50000
initial_health = 50000

[node name="DamageComponent" type="Node" parent="PlayerTest"]
script = ExtResource("4_l1iww")
damage = 500

[node name="EffectComponent" type="Node" parent="PlayerTest"]
script = ExtResource("5_gmcvy")
availibe_effects = Array[ExtResource("6_r3hpr")]([SubResource("Resource_nm8cl")])

[node name="Entities" type="Node2D" parent="."]
script = ExtResource("6_fwpvn")

[connection signal="health_changed" from="PlayerTest/HealthComponent" to="PlayerTest" method="_on_health_component_health_changed"]
[connection signal="health_depleted" from="PlayerTest/HealthComponent" to="PlayerTest" method="_on_health_component_health_depleted"]
[connection signal="health_recovered" from="PlayerTest/HealthComponent" to="PlayerTest" method="_on_health_component_health_recovered"]
